# bazel-compilation-database

./: BUILD  MODULE.bazel  README.md  WORKSPACE  download_transitive_dependencies.bzl  extensions.bzl  extract_compile_command.cc  generate_compilation_database.sh  generate_tablegen_compile_commands.sh  setup_compile_commands.sh
bazel/: download_transitive_dependencies.bzl  rapidjson.BUILD  setup_cdb_generator.bzl
extractor/: BUILD  extract_compile_command.cc
generate_compile_commands/: BUILD  deps.bzl  extract_compile_command.cc  generate_compilation_database.sh
kythe/generate_compile_commands/: 0001-Adapt-extract_compile_command.cc-from-kythe-master-b.patch  0001-Correct-build-of-extract_compile_command.patch  BUILD  README.md  extract_compile_command.cc  generate_compilation_database.sh  generate_compile_commands_json.py
tools/: BUILD  extra_actions_base_pb2.py  generate_compilation_database.sh  generate_compile_command.py  generate_compile_commands_json.py
