###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "bazel_compile_commands_generator",
    version = "1.0.0",
    repo_name = "bazel_compile_commands_generator",
)

# Dependencies available in BCR
# bazel_dep(name = "bazel_skylib", version = "1.7.1")
# bazel_dep(name = "rules_python", version = "1.2.0")
# bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")
# bazel_dep(name = "rules_java", version = "8.12.0")
bazel_dep(name = "protobuf", version = "30.1")
bazel_dep(name = "rules_proto", version = "7.1.0")
# bazel_dep(name = "rules_pkg", version = "1.1.0")
# bazel_dep(name = "re2", version = "2024-07-02.bcr.1")
# bazel_dep(name = "abseil-cpp", version = "20250512.1")
# bazel_dep(name = "or-tools", version = "9.12")
# bazel_dep(name = "eigen", version = "4.0.0-20241125.bcr.2")
# bazel_dep(name = "highs", version = "1.11.0")
# bazel_dep(name = "pcre2", version = "10.46-DEV")
# bazel_dep(name = "glpk", version = "5.0.bcr.4")
# bazel_dep(name = "bliss", version = "0.73")
# bazel_dep(name = "scip", version = "9.2.0.bcr.3")
# bazel_dep(name = "zlib-ng", version = "2.0.7")
bazel_dep(name = "rapidjson", version = "1.1.0.bcr.20250205")
