###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "bazel_compile_commands_generator",
    version = "1.0.0",
    repo_name = "bazel_compile_commands_generator",
)

# bazel_dep(name = "rules_cc", version = "0.1.1")
# bazel_dep(name = "protobuf", version = "30.1")
# bazel_dep(name = "rules_proto", version = "7.1.0")
# bazel_dep(name = "rapidjson", version = "1.1.0.bcr.20250205")
